fix alignment and horizontal scroll

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@ body {
     background-attachment: fixed;
     /* background-color: #0f103f; */
     color: white;
+    overflow-x: hidden;
 }
 
 html {
